feat: added a debug execution to the openjfx plugin